--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
-    "mongodb": "^6.6.0",
     "mongoose": "^8.3.4",
     "react-scripts": "^3.4.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^3.3.4",
+    "uuid": "^10.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
